# mlcore-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
src/mlcore/: __init__.py  client.py  datasets.py  exceptions.py  models.py
