[project]
name = "mlcore-client"
version = "0.1.0"
description = "A Python client for MLCore, providing a database-like interface for managing datasets and machine learning models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Amanpreet Singh" }
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
