[project]
name = "mlcore-client"
version = "0.1.3"
description = "A Python client for MLCore, providing a database-like interface for managing datasets and machine learning models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Amanpreet Singh" }
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
